# advent-of-code

./: Cargo.toml  README.md
AOC2025/: .gitignore  dune-project  flake.nix  justfile
AOC2025/lib/: common.ml  dune
AOC2025/test/: dune
aoc2024/: Cargo.toml
aoc2024/src/: day01.rs  day02.rs  day11.rs  main.rs
aoclib/: Cargo.toml
aoclib/src/: lib.rs
